[package]
name = "lcd-1in44-hat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
int-enum = "0.5.0"
rppal = "0.15.0"
strum = "0.25.0"
strum_macros = "0.25.2"
st7735-lcd = { git = "https://github.com/gitcrtn/embedded-lcd-driver-rs", branch = "st7735-rpi", features = ["graphics"] }
embedded-graphics-framebuf = "0.5.0"
